--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+
+.flex-container{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
